# celeb-pm

./: .env.example  .gitignore  CLAUDE.md  journal.txt  pyproject.toml
.claude/: settings.json
analysis/: 13f_signal_triggers.csv  13f_signal_triggers_clean.csv  13f_signal_triggers_with_returns.csv  PIPELINE_MAP.md  _audit_log.json  _extraction_log.json  _reaudit_log.json  _removed_files_log.md  ai_basket_definition.json  ai_basket_reclassification.json  all_summaries.json  basket_reresolution.csv  basket_reresolution_v2.csv  basket_reresolution_v2_implementation_notes.md  basket_reresolution_v4.csv  basket_v4_application_diff.md  clustering_fix_diff.md  corpus_audit.md  corpus_gap_fill_report.md  filing_to_filing_returns.csv  filing_to_filing_returns_universal.csv  manual_overrides.json  override_rerun_diff.md  rescore_diff_summary.md  six_new_appearances_curation_gate.md  six_new_appearances_implementation_notes.md  step4_signal_events_v2.csv  step4_signal_events_v3.csv  step4_signal_events_v4.csv  step4_signal_events_v5.csv  step4_signal_events_v5_corrected.csv  step4_signal_events_v5_final.csv  step4_signal_events_v5_final.xls  step4_signal_events_v5_final.xlsx  step4_signal_events_v6.csv  step4_signal_events_v6_with_returns.csv  step4_signal_events_v6_with_returns_extended.csv  step4_signal_events_v6_with_returns_extended.xlsx  step4_signal_events_v7_with_returns_extended.csv  step4_signal_events_v7_with_returns_extended.xlsx  (+10 more)
config/: investors.json
docs/: CONTRIBUTING.md  README.md
handoffs/: 2026-06-12-main.md  2026-06-14-main.md  2026-06-24-main.md  (+12 more)
(+928 files in other folders)
